added css changes | and component

--- a/src/Components/Button/Button.css
+++ b/src/Components/Button/Button.css
@@ -4,5 +4,5 @@
   line-height: 1.75;
   letter-spacing: 0.02857em;
   text-transform: uppercase;
-  background-color: blue;
+  background-color: rgb(238, 238, 246);
 }
